--- a/az-config/create/tasks/create-master-resources.yml
+++ b/az-config/create/tasks/create-master-resources.yml
@@ -20,12 +20,12 @@
     --name "{{ appservice_plan_name_base }}-master"
     --resource-group "{{ resource_group_name_base }}-master"
 
-# - name: Create storage account
-#   shell: >
-#     az storage account create 
-#     --name "{{ storage_account_name }}"
-#     --resource-group "{{ resource_group_name_base }}-master"
-#     --location "{{ location }}"
+- name: Create storage account
+  shell: >
+    az storage account create 
+    --name "{{ storage_account_name }}"
+    --resource-group "{{ resource_group_name_base }}-master"
+    --location "{{ location }}"
 
 - name: Create container registry
   shell: >
@@ -36,11 +36,11 @@
     --sku Basic 
     --admin-enabled true
 
-- name: Create a service principal  -- this should use better certs so doing it with a password for now
-  shell: >
-    az ad sp create-for-rbac 
-    --keyvault "{{ project_name }}-keyvault"
-    --cert "{{ project_name }}-sp-cert"
-    --create-cert
-    --name "{{ project_name }}-service-principal"
+# - name: Create a service principal  -- this should use better certs so doing it with a password for now
+#   shell: >
+#     az ad sp create-for-rbac 
+#     --keyvault "{{ project_name }}-keyvault"
+#     --cert "{{ project_name }}-sp-cert"
+#     --create-cert
+#     --name "{{ project_name }}-service-principal"
 
